<resources>
    <string name="app_name">SoftTalk Messenger</string>
    <string name="recent_details_date_today">Today</string>
    <string name="recent_details_date_yesterday">Yesterday</string>
    <string name="support_terms_conditions">Terms &amp; Conditions</string>
    <string name="icon_contacts">&#xf2b9;</string>
    <string name="large_text">"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"</string>
    <string name="icon_call_logs">&#xf1da;</string>
    <string name="icon_messages">&#xf27a;</string>
    <string name="icon_profile">&#xf007;</string>
    <string name="icon_more">&#xf141;</string>
    <string name="icon_fill_circle">&#xf111;</string>
    <string name="icon_circle">&#xf10c;</string>
    <string name="signup_flag">&#xf024;</string>
    <string name="signup_mobile">&#xf10b;</string>
    <string name="signup_arrow_down">&#xf078;</string>
    <string name="status_camera">&#xf030;</string>
    <string name="country_search">&#xf002;</string>
    <string name="search_cancel">&#xf057;</string>
    <string name="contacts_details_back_arrow">&#xf060;</string>
    <string name="contacts_details_edit_contact">&#xf040;</string>
    <string name="dialpad_call">&#xf095;</string>
    <string name="contact_chat">&#xf075;</string>
    <string name="contact_more">&#xf142;</string>
    <string name="contact_details">&#xf2b9;</string>
    <string name="contact_invite">&#xf1d8;</string>
    <string name="chat_arrow_right">&#xf054;</string>
    <string name="chat_image_transfer">&#xf1c5;</string>
    <string name="chat_file_transfer">&#xf15b;</string>
    <string name="chat_voice_transfer">&#xf130;</string>
    <string name="info">&#xf05a;</string>
    <string name="download">&#xf019;</string>
    <string name="chat_location">&#xf041;</string>
    <string name="chat_contact">&#xf2b9;</string>
    <string name="login_password_hide">&#xf070;</string>
    <string name="login_password_show">&#xf06e;</string>
    <string name="recents_delete">&#xf1f8;</string>
    <string name="contact_details_email">&#xf0e0;</string>
    <string name="dialpad_add_contact">&#xf234;</string>
    <string name="chat_copy_text">&#xf0ea;</string>
    <string name="chat_play">&#xf04b;</string>
    <string name="chat_pause">&#xf04c;</string>
    <string name="audio_download">&#xf01a;</string>
    <string name="chat_forward">&#xf064;</string>
    <string name="video_call_icon">&#xf03d;</string>
    <string name="chat_audio_icon">&#xf1c7;</string>
    <string name="chat_location_icon">&#xf124;</string>
    <string name="chat_file_icon">&#xf15c;</string>
    <string name="help_screen_next">Next</string>
    <string name="help_screen_skip">Skip</string>
    <string name="location_settings">Location settings</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="location_not_found">Location not found</string>
    <string name="splash_version_name">SoftTalk Messenger</string>
    <string name="splash_version_number">V 1.0.0</string>
    <string name="splash_version_number_single">V </string>
    <string name="splash_network_message">Please make sure your Network Connection is ON</string>
    <string name="splash_network_alert_settings">Settings</string>
    <string name="splash_network_alert_ok">OK</string>
    <string name="splash_pref_is_already_login">isLogin</string>
    <string name="splash_pref_network_status">NetworkStatus</string>
    <string name="help_screen_prf_more">More</string>
    <string name="notification_title">SoftTalk Messenger</string>
    <string name="add_message_pref_balance">balance</string>
    <string name="add_message_header_name">Contacts</string>
    <string name="add_message_no_contacts_found_message">No Contacts Found</string>
    <string name="bal_trans_tag">BalanceTransferActivity</string>
    <string name="bal_trans_pref_balance">balance</string>
    <string name="bal_trans_pref_app_compat">AppContact</string>
    <string name="bal_trans_mobile_not_empty">mobile number shouldn\'t be empty</string>
    <string name="bal_trans_credits_not_empty">credits shouldn\'t be empty</string>
    <string name="bal_trans_mobile_valid">mobile number should be valid</string>
    <string name="bal_trans_credits_valid">credits should be valid</string>
    <string name="bal_trans_network_unavail">Network Unavailable</string>
    <string name="bal_trans_success">Balance transfer done</string>
    <string name="bal_trans_success_message1">Balance transfer successfully sent to</string>
    <string name="bal_trans_success_message2">with credit of</string>
    <string name="bal_trans_response_message_key">data</string>
    <string name="bal_trans_response_message_value">message</string>
    <string name="bal_trans_response_error_message_key">error</string>
    <string name="bal_trans_time_out">Timeout.Pls Retry..</string>
    <string name="bal_trans_wait_message">Please wait..</string>
    <string name="bal_trans_pref_avail_message">AvailBal</string>
    <string name="bal_trans_http_api_message">API</string>
    <string name="bal_trans_http_data_message">Data</string>
    <string name="bal_trans_balance_transfer_message">balancetransfer</string>
    <string name="bal_trans_balance_transfer_success_message">Balance transfer done For $</string>
    <string name="balance_transfer_failed">Oops! Balance transfer failed</string>
    <string name="bal_trans_valid_message">valid</string>
    <string name="bal_trans_ok_message">Ok</string>
    <string name="bal_trans_header_name">Balance Transfer</string>
    <string name="login_hint_username_message">Number</string>
    <string name="login_hint_password_message">Password</string>
    <string name="login_btn_login_message">Login</string>
    <string name="password_hint_one_time_pwd">Enter OTP</string>
    <string name="password_hint_set_pwd">Set Password</string>
    <string name="password_call_via_ivr">Call via IVR</string>
    <string name="password_btn_next">Next</string>
    <string name="signup_hint_mobile_number">Mobile Number</string>
    <string name="signup_btn_signup">Sign Up</string>
    <string name="signup_btn_login">Login</string>
</resources>