<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_180dp"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:padding="@dimen/_5dp"
            android:background="@drawable/input_edittext_bg"
            android:gravity="center">

            <EditText
                android:id="@+id/et_one_time_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginRight="@dimen/_25dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textColorHint="@color/black"
                android:hint="@string/password_hint_one_time_pwd"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:layout_marginTop="@dimen/_30dp"
            android:padding="@dimen/_5dp"
            android:background="@drawable/input_edittext_bg"
            android:gravity="center_vertical"
            android:visibility="visible">


            <EditText
                android:id="@+id/et_set_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_5dp"
                android:layout_toLeftOf="@+id/showpwd_check"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/password_hint_set_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColorHint="@color/black"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:id="@+id/showpwd_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingLeft="@dimen/_15dp"
                android:paddingRight="@dimen/_25dp"
                android:paddingTop="@dimen/_10dp"
                android:textColor="#b5b5b5"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_resend_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:padding="@dimen/_10dp">

            <TextView
                android:id="@+id/tv_resend_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="OTP by Call"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/password_call_via_ivr"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp" />


        <LinearLayout
            android:id="@+id/ll_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginLeft="@dimen/_100dp"
            android:layout_marginRight="@dimen/_100dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/submit_button_normal_bg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/password_btn_next"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</layout>