<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_180dp"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:text="Enter mobile number with +"
            android:textColor="@color/white"
            android:textSize="@dimen/text_13sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:padding="@dimen/_5dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/input_edittext_bg"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_marginRight="@dimen/_25dp"
                android:background="@android:color/transparent"
                android:hint="@string/login_hint_username_message"
                android:inputType="textCapSentences|textNoSuggestions|textVisiblePassword"
                android:maxLength="15"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:padding="@dimen/_5dp"
            android:background="@drawable/input_edittext_bg"
            android:layout_marginRight="@dimen/_40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_25dp"
                android:layout_toLeftOf="@+id/showpwd_check"
                android:background="@android:color/transparent"
                android:hint="@string/login_hint_password_message"
                android:inputType="textCapSentences|textNoSuggestions|textPassword"
                android:maxLength="15"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_18sp" />

            <TextView
                android:id="@+id/showpwd_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_25dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginLeft="@dimen/_80dp"
            android:layout_marginRight="@dimen/_80dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@drawable/submit_button_normal_bg">

            <TextView
                android:id="@+id/tv_login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/login_btn_login_message"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp" />

        </LinearLayout>
    </LinearLayout>
</layout>