<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_130dp"
            android:layout_height="@dimen/_180dp"
            android:layout_marginTop="@dimen/_50dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.AppCompatImageView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40dp"
            android:layout_marginRight="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ll_select_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10dp"
                android:padding="@dimen/_10dp"
                android:background="@drawable/input_edittext_bg"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_signup_country"
                    android:layout_width="@dimen/_20dp"
                    android:layout_height="@dimen/_20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_10dp" />

                <EditText
                    android:id="@+id/tv_signup_select_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tv_signup_arrow_down"
                    android:layout_toRightOf="@+id/iv_signup_country"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <TextView
                    android:id="@+id/tv_signup_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_25dp"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:layout_marginTop="@dimen/_30dp"
                android:background="@drawable/input_edittext_bg"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_signup_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:background="@android:color/transparent"
                    android:textColor="#b2b2b2"
                    android:textSize="@dimen/text_24sp" />

                <EditText
                    android:id="@+id/et_signup_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_toRightOf="@+id/tv_signup_mobile"
                    android:background="@android:color/transparent"
                    android:hint="@string/signup_hint_mobile_number"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_16sp" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/ll_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45dp"
                android:layout_marginLeft="@dimen/_60dp"
                android:layout_marginRight="@dimen/_60dp"
                android:layout_marginTop="@dimen/_25dp"
                android:background="@drawable/submit_button_normal_bg">

                <TextView
                    android:id="@+id/tv_signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/signup_btn_signup"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bbbb"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_20dp"
                    android:paddingRight="@dimen/_20dp"
                    android:text="@string/signup_btn_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>